<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_eventos"
            android:icon="@drawable/ic_gift"
            android:title="@string/eventos"/>
        <item
            android:id="@+id/nav_amigos"
            android:icon="@drawable/ic_action_users"
            android:title="@string/amigos" />
        <item
            android:id="@+id/nav_dinero"
            android:icon="@drawable/ic_euro_symbol"
            android:title="@string/pagos" />
        <item
            android:id="@+id/nav_notificaciones"
            android:icon="@drawable/ic_notifications"
            android:title="@string/notificaciones" />
    </group>

    <item
        android:id="@+id/salir"
        android:title="@string/salir">
        <menu>
            <item
                android:id="@+id/nav_cerrar_sesion"
                android:icon="@drawable/ic_logout"
                android:title="@string/cerrar_sesion" />
        </menu>
    </item>

</menu>
