<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="regalos.example.com.gestorderegalos.Login">

    <TextView
        android:id="@+id/usuarioTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/nombre_de_usuario"
        android:textSize="18sp"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="55dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/usuarioET"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="31dp"
        android:layout_marginStart="31dp" />

    <EditText
        android:id="@+id/usuarioET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/user"
        android:inputType="textPersonName"
        android:text=""
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/usuarioTV"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:drawableLeft="@drawable/ic_action_user"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/passwordTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contrasenia"
        android:textSize="18sp"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/passwordET"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="14dp"
        app:layout_constraintLeft_toLeftOf="@+id/passwordET"
        android:layout_marginLeft="61dp"
        android:layout_marginStart="61dp" />

    <EditText
        android:id="@+id/passwordET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/usuarioET"
        android:layout_marginTop="70dp"
        app:layout_constraintTop_toBottomOf="@+id/usuarioET"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/usuarioET"
        app:layout_constraintHorizontal_bias="1.0"
        android:drawableLeft="@drawable/ic_action_key"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginBottom="79dp"
        android:background="@color/colorAccent"
        android:text="@string/iniciar_sesion"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="@+id/registroButton"
        app:layout_constraintLeft_toLeftOf="@+id/registroButton"
        app:layout_constraintRight_toRightOf="@+id/registroButton"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        tools:targetApi="lollipop"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/passwordET"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/registroButton"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:text="@string/registro"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="31dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="31dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="45dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="31dp"
        android:layout_marginRight="31dp"
        app:layout_constraintHorizontal_bias="0.0" />

</android.support.constraint.ConstraintLayout>
