<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="regalos.example.com.gestorderegalos.Registro"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/usuarioRegTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre_de_usuarioAst"
        android:textSize="14sp"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="16dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/ususarioRegET"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ususarioRegET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/passwordRegET"
        app:layout_constraintTop_toBottomOf="@+id/usuarioRegTV"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/passwordRegET" />

    <TextView
        android:id="@+id/passwordRegTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contraseniaAst"
        android:textSize="14sp"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/passwordRegET"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/passwordRegET" />

    <EditText
        android:id="@+id/passwordRegET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/nombreET"
        android:layout_marginTop="31dp"
        app:layout_constraintTop_toBottomOf="@+id/ususarioRegET"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/nombreET" />

    <TextView
        android:id="@+id/nombreTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombreAst"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="27dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/passwordRegET"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="27dp" />

    <EditText
        android:id="@+id/nombreET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="28dp"
        app:layout_constraintTop_toBottomOf="@+id/passwordRegET"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/nombreTV"
        android:layout_marginLeft="-5dp"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/apellidosTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:text="@string/apellidosAst"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="27dp" />

    <EditText
        android:id="@+id/apellidosET"
        android:layout_width="291dp"
        android:layout_height="43dp"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/correoET"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="33dp"
        app:layout_constraintLeft_toLeftOf="@+id/apellidosTV"
        android:layout_marginLeft="-11dp"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/correoTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="14sp"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@+id/apellidosET"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/correoET" />

    <EditText
        android:id="@+id/correoET"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/registrarButton"
        app:layout_constraintRight_toRightOf="@+id/apellidosET"
        android:layout_marginTop="94dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="94dp"
        app:layout_constraintLeft_toLeftOf="@+id/apellidosET"
        app:layout_constraintTop_toTopOf="@+id/apellidosTV"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/infoTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/campos_obligatorios"
        android:textSize="12sp"
        tools:ignore="MissingConstraints"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="13dp"
        app:layout_constraintTop_toBottomOf="@+id/correoET"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/correoET" />

    <Button
        android:id="@+id/registrarButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrarse"
        android:layout_marginStart="27dp"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="35dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="27dp" />

</android.support.constraint.ConstraintLayout>
