<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/nombreEventoNewTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre_evento"
        android:layout_marginStart="26dp"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="37dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="26dp" />

    <EditText
        android:id="@+id/newEventoET"
        android:layout_width="289dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/nombreEventoNewTV"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/nombreEventoNewTV" />

    <TextView
        android:id="@+id/presupuestoTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/presupuesto"
        android:layout_marginStart="26dp"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/newEventoET"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="26dp" />

    <EditText
        android:id="@+id/presupuestoET"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/presupuestoTV"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/presupuestoTV" />

    <Button
        android:id="@+id/newEventoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crear_evento"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="37dp"
        app:layout_constraintLeft_toLeftOf="parent" />

</android.support.constraint.ConstraintLayout>